<resources>
    <string name="app_name">Smarter Foodies</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="apply">Apply</string>
    <string name="title_activity_login_google">LoginGoogle</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select">"Select Item"</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="person_search">Person search</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="liked">Liked</string>
    <string name="logout">Logout</string>
    <string name="weeklyPlans">WeeklyPlans</string>
    <string name="apply_as_chef">apply as chef</string>
    <string name="cart">Cart</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="calories">Calories</string>
    <string name="submit">submit</string>
    <string name="Cart">Cart</string>
    <string name="my_recipes">My Recipes</string>
    <string name="reports">Reports</string>

</resources>