<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="Search"/>

        <item android:id="@+id/nav_favorites"
            android:icon="@drawable/red_heart_filled"
            android:title="@string/liked"/>

        <item android:id="@+id/nav_weekly_planing"
            android:icon="@drawable/ic_baseline_edit_calendar_24"
            android:title="@string/Cart"/>

<!--        <item android:id="@+id/nav_cart"-->
<!--            android:icon="@drawable/ic_baseline_shopping_cart_24"-->
<!--            android:title="@string/cart"/>-->

        <item android:id="@+id/nav_add_recipe"
            android:icon="@drawable/ic_baseline_note_add_24"
            android:title="@string/add_recipe"/>

        <item android:id="@+id/nav_my_recipes"
            android:icon="@drawable/baseline_edit_document_black_36"
            android:title="@string/my_recipes"/>

<!--        <item android:id="@+id/nav_person_search"-->
<!--            android:icon="@drawable/ic_search_profile"-->
<!--            android:title="@string/person_search"/>-->

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>


        <item
            android:title="@string/others"
            android:id="@+id/title_">
            <menu>
                <item
                    android:id="@+id/nav_logOut"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>